force-app/main/default/objects/Order/fields/webkul_wws__eShopSync_Config__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__eShopSync_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eShopSync Config</label>
    <referenceTo>webkul_wws__eshop_sync__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>