force-app/main/default/objects/Order/fields/webkul_wws__Order_Number__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>