force-app/main/default/objects/Order/fields/webkul_wws__Placed_By__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Placed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>