force-app/main/default/objects/Order/fields/webkul_wws__woo_Actual_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Actual_Order_Number__c</fullName>
    <label>woo Actual Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>