force-app/main/default/objects/Order/fields/webkul_wws__woo_coupon_code__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_coupon_code__c</fullName>
    <label>woo coupon code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>