force-app/main/default/objects/Order/fields/webkul_wws__woo_Discount_Cost__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Discount_Cost__c</fullName>
    <label>woo  Discount Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>