force-app/main/default/objects/Order/fields/webkul_wws__woo_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>woo Order Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>