force-app/main/default/objects/Order/fields/webkul_wws__Woo_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Woo_Order_Status__c</fullName>
    <description>Woo commmerce order status</description>
    <inlineHelpText>Woo commerce order status</inlineHelpText>
    <label>Woo Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>