force-app/main/default/objects/Order/fields/webkul_wws__woo_shipment_cost__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_shipment_cost__c</fullName>
    <label>woo shipment cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>