force-app/main/default/objects/Order/validationRules/webkul_wws__Order_Insert_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>webkul_wws__Order_Insert_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL( webkul_wws__eShopSync_Config__c ), NOT(CONTAINS( webkul_wws__Order_Number__c , webkul_wws__eShopSync_Config__r.webkul_wws__Store_Unique_Code__c )))</errorConditionFormula>
    <errorMessage>Syncing from this site not allowed.</errorMessage>
</ValidationRule>